{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 23,
  "lineage": "c6de513a-63e3-1791-808b-ca79b713cbcf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a463db739690282",
            "arn": "arn:aws:ec2:us-east-1:636461996688:elastic-ip/eipalloc-00a463db739690282",
            "domain": "vpc",
            "id": "eipalloc-00a463db739690282",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-175-46-171.compute-1.amazonaws.com",
            "public_ip": "54.175.46.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "production-nat"
            },
            "tags_all": {
              "Name": "production-nat"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:internet-gateway/igw-0e5e97d6ef1098b3a",
            "id": "igw-0e5e97d6ef1098b3a",
            "owner_id": "636461996688",
            "tags": {
              "Name": "production-igw"
            },
            "tags_all": {
              "Name": "production-igw"
            },
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a463db739690282",
            "association_id": "eipassoc-04b47fbb6516e773c",
            "connectivity_type": "public",
            "id": "nat-0e9343215294f3540",
            "network_interface_id": "eni-078332cc535083173",
            "private_ip": "10.0.76.45",
            "public_ip": "54.175.46.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f292862c91a6b340",
            "tags": {
              "Name": "production-nat"
            },
            "tags_all": {
              "Name": "production-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:route-table/rtb-065070d9bba1ae08d",
            "id": "rtb-065070d9bba1ae08d",
            "owner_id": "636461996688",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9343215294f3540",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-private"
            },
            "tags_all": {
              "Name": "production-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:route-table/rtb-07c8a45620c9d5286",
            "id": "rtb-07c8a45620c9d5286",
            "owner_id": "636461996688",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5e97d6ef1098b3a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "production-public"
            },
            "tags_all": {
              "Name": "production-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087a95a95763d0cdd",
            "route_table_id": "rtb-065070d9bba1ae08d",
            "subnet_id": "subnet-05e022ac775b55ef9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone1",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d4ce7ba33d210db",
            "route_table_id": "rtb-065070d9bba1ae08d",
            "subnet_id": "subnet-0beb4546a2175ca4a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone2",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b418a80053856014",
            "route_table_id": "rtb-07c8a45620c9d5286",
            "subnet_id": "subnet-0f292862c91a6b340"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d54a6bb1beeafc9d",
            "route_table_id": "rtb-07c8a45620c9d5286",
            "subnet_id": "subnet-0e2ab3721130782c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_zone2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:subnet/subnet-05e022ac775b55ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e022ac775b55ef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636461996688",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-us-east-1a",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "production-private-us-east-1a",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:subnet/subnet-0beb4546a2175ca4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beb4546a2175ca4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "636461996688",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-private-us-east-1b",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "production-private-us-east-1b",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:subnet/subnet-0f292862c91a6b340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f292862c91a6b340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636461996688",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-us-east-1a",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "production-public-us-east-1a",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:subnet/subnet-0e2ab3721130782c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2ab3721130782c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "636461996688",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "production-public-us-east-1b",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "production-public-us-east-1b",
              "kubernetes.io/cluster/production-rayda": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-064907ad2c1a42fdc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:636461996688:vpc/vpc-064907ad2c1a42fdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a99b3c70ddd9d15",
            "default_route_table_id": "rtb-0d6b3f4f74622fe5a",
            "default_security_group_id": "sg-0fe55c83c5d935464",
            "dhcp_options_id": "dopt-0d1439bb9581353e6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-064907ad2c1a42fdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d6b3f4f74622fe5a",
            "owner_id": "636461996688",
            "tags": {
              "Name": "production-main"
            },
            "tags_all": {
              "Name": "production-main"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}